--- a/profile.html
+++ b/profile.html
@@ -262,6 +262,87 @@
                     </div>
                 </div>
             </div>
+            <div class="mt-4">
+                <div class="flex">
+                    <input type="checkbox" class="shrink-0 mt-0.5 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500 disabled:opacity-50 disabled:pointer-events-none" id="resigned-flag">
+                    <label for="resigned-flag" class="text-sm text-gray-500 ms-3">Resigned</label>
+                  </div>
+            </div>
+        </div>
+
+        <div class="mb-4 mt-4">
+            <h2 class="font-extrabold text-xl 2xl:text-2xl text-[#4B4E5C]">Add Certification Details</h2>
+            <p>Please Fill in the required information below</p>
+        </div>
+        <div>
+                <form action="">
+                        <button type="submit"
+                                class="assign-btn py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-black bg-black text-white hover:opacity-70 focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2 transition-all text-sm sm:text-base">
+                                Add
+                            </button>
+                            <div class="flex flex-col sm:flex-row items-center gap-4 mb-2 mt-4">
+                                <div>
+                                    <label for="" class="mb-1">Certification Name</label>
+                                    <input type="text" class="k-input w-full">
+                                </div>
+                                <div>
+                                    <label for="" class="mb-1">Certification Duration</label>
+                                    <input type="text" class="k-input w-full">
+                                </div>
+                                <div class="flex-1" class="mb-1">
+                                    <label for="">Certification Description</label>
+                                    <input type="text" class="k-input w-full">
+                                </div>
+                            </div>
+                            <div>
+                                <div>
+                                    <input type="file" name="" id="cert-attach" class="hidden">
+                                    <label for="cert-attach" class="text-blue-500 underline font-medium">Upload Certification</label>
+                                </div>
+                            </div>
+                    </form>
+                    <div class="flex overflow-x-auto gap-3 mt-4">
+                        <div class="group bg-[#F9F9F9] border border-transparent rounded-md p-4 2xl:p-6 min-w-[20rem] w-80 hover:bg-white hover:border-emerald-200 hover:shadow-xl">
+                            <div class="border-b">
+                                <h2 class="font-bold text-[#4B4E5C]">Master Design System</h2>
+                                <p class="text-sm 2xl:text-base mb-3">Course Duration 2 Years</p>
+                            </div>
+
+                            <div class="mt-4">
+                                <h2 class="font-bold text-[#4B4E5C]">Description</h2>
+                                <p class="text-sm 2xl:text-base mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit. Donec eu lorem mauris. Fusce non</p>
+                            </div>
+
+                            <button type="button"
+                                class="py-2 px-6 inline-flex justify-center items-center gap-2 rounded-md border border-transparent font-semibold bg-gray-500 text-white group-hover:bg-emerald-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition-all text-sm">
+                                View
+                            </button>
+                        </div>
+
+                        <div class="group bg-[#F9F9F9] border border-transparent rounded-md p-4 2xl:p-6 min-w-[20rem] w-80 hover:bg-white hover:border-emerald-200 hover:shadow-xl">
+                            <div class="border-b">
+                                <h2 class="font-bold text-[#4B4E5C]">Google UX Design</h2>
+                                <p class="text-sm 2xl:text-base mb-3">Course Duration 2 Years</p>
+                            </div>
+
+                            <div class="mt-4">
+                                <h2 class="font-bold text-[#4B4E5C]">Description</h2>
+                                <p class="text-sm 2xl:text-base mb-3 break-normal">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing
+                                    elit. Donec eu lorem mauris. Fusce non</p>
+                            </div>
+
+                            <button type="button"
+                                class="py-2 px-6 inline-flex justify-center items-center gap-2 rounded-md border border-transparent font-semibold bg-gray-500 text-white group-hover:bg-emerald-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition-all text-sm">
+                                View
+                            </button>
+                        </div>
+                    </div>
+        </div>
+        <div class="mb-4 mt-4">
+            <h2 class="font-extrabold text-xl 2xl:text-2xl text-[#4B4E5C]">Skills</h2>
+            <p>Add Or Update Skills</p>
         </div>
         <div class="flex flex-col sm:flex-row items-start gap-y-4 gap-x-8 mt-4">
             <div class="order-2 sm:order-1">
