--- a/testing.html
+++ b/testing.html
@@ -1,31 +1,14 @@
 <link rel="stylesheet" href="./dist/output.css">
-<div class="bg-teal-50 border-t-2 border-teal-500 rounded-lg p-4" role="alert">
-    <div class="flex">
-        <div class="flex-shrink-0">
-            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full border-4 border-teal-100 bg-teal-200 text-teal-800">
-                <svg class="flex-shrink-0 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z" /><path d="m9 12 2 2 4-4" /></svg>
-            </span>
-        </div>
-        <div class="ms-3">
-            <h3 class="text-gray-800 font-semibold">
-                Successfully updated.
-            </h3>
-            <p class="text-sm text-gray-700">
-                OAF has already been addressed.
-            </p>
-        </div>
-    </div>
-</div>
-<div class="bg-red-50 border-t-2 border-red-500 rounded-lg p-4" role="alert">
-    <div class="flex">
-        <div class="flex-shrink-0">
-            <span class="inline-flex justify-center items-center w-8 h-8 rounded-full border-4 border-red-100 bg-red-200 text-red-800">
-                <svg class="flex-shrink-0 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="currentColor" d="M16 2C8.2 2 2 8.2 2 16s6.2 14 14 14s14-6.2 14-14S23.8 2 16 2zm0 26C9.4 28 4 22.6 4 16S9.4 4 16 4s12 5.4 12 12s-5.4 12-12 12z"/><path fill="currentColor" d="M21.4 23L16 17.6L10.6 23L9 21.4l5.4-5.4L9 10.6L10.6 9l5.4 5.4L21.4 9l1.6 1.6l-5.4 5.4l5.4 5.4z"/></svg>
-            </span>
-        </div>
-        <div class="ms-3">
-            <h3 class="text-gray-800 font-semibold">Successfully updated.</h3>
-            <p class="text-sm text-gray-700">OAF has already been addressed.</p>
-        </div>
-    </div>
-</div>
+
+<div class="flex items-center">
+    <label for="hs-basic-with-description" class="text-sm text-gray-500 me-3">Off</label>
+    <input type="checkbox" id="hs-basic-with-description" class="relative w-[3.25rem] h-7 p-px bg-gray-400 border-transparent text-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:ring-emerald-600 disabled:opacity-50 disabled:pointer-events-none checked:bg-none checked:text-emerald-600 checked:border-emerald-600 focus:checked:border-emerald-600 before:absolute before:top-0 before:bottom-0 before:my-auto before:inline-block before:w-6 before:h-6 before:bg-white checked:before:bg-emerald-200 before:translate-x-0 checked:before:translate-x-full before:rounded-full before:shadow before:transform before:ring-0 before:transition before:ease-in-out before:duration-200">
+    <label for="hs-basic-with-description" class="text-sm text-gray-500 ms-3">On</label>
+  </div>
+
+
+  <!-- <div class="flex items-center">
+    <label for="hs-basic-with-description" class="text-sm text-gray-500 me-3">Off</label>
+    <input type="checkbox" id="hs-small-switch" class="relative w-11 h-6 p-px bg-gray-100 border-transparent text-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:ring-emerald-600 disabled:opacity-50 disabled:pointer-events-none checked:bg-none checked:text-emerald-600 checked:border-emerald-600 focus:checked:border-emerald-600 before:inline-block before:w-5 before:h-5 before:bg-white checked:before:bg-emerald-200 before:absolute before:top-0 before:bottom-0 before:my-auto before:translate-x-0 checked:before:translate-x-full before:rounded-full before:shadow before:transform before:ring-0 before:transition before:ease-in-out before:duration-200">
+    <label for="hs-small-switch" class="text-sm text-gray-500 ms-3">Small</label>
+  </div> -->
