--- a/status-dropdown.html
+++ b/status-dropdown.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <div class="hs-dropdown relative inline-flex">
-        <button id="hs-dropdown-default" type="button" class="hs-dropdown-toggle status-toggle deployed py-2 px-2 inline-flex items-center gap-x-2 text-sm font-medium rounded-full border border-gray-200 bg-white text-gray-800 shadow-sm disabled:opacity-50 disabled:pointer-events-none">
-          <span>Deployed</span>
+        <button id="hs-dropdown-default" type="button" class="hs-dropdown-toggle status-toggle lwp py-2 px-2 inline-flex items-center gap-x-2 text-sm font-medium rounded-full border border-gray-200 bg-white text-gray-800 shadow-sm disabled:opacity-50 disabled:pointer-events-none">
+          <span>Leave Withot Pay</span>
           <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 21a9 9 0 1 0 0-18a9 9 0 0 0 0 18zM9.707 10.293a1 1 0 1 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l3-3a1 1 0 0 0-1.414-1.414L12 12.586l-2.293-2.293z" clip-rule="evenodd"/></svg>
         </button>
       
         <div class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-[15rem] bg-white shadow-md rounded-lg p-2 mt-2 after:h-4 after:absolute after:-bottom-4 after:start-0 after:w-full before:h-4 before:absolute before:-top-4 before:start-0 before:w-full" aria-labelledby="hs-dropdown-default">
-          <!-- <button onclick="changeStatus(this);" data-status="Deployed" class="w-full flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-emerald-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100">
-            Deployed
-          </button> -->
-          <button onclick="changeStatus(this);" data-status="Overrun" class="w-full flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-blue-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100">
-            Overrun
+          <button onclick="changeStatus(this);" data-status="Deployed" class="w-full flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-slate-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100">
+            Leave Without Pay
+          </button>
+          <button onclick="changeStatus(this);" data-status="Overrun" class="w-full flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-pink-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100">
+            Maternity Leave
           </button>
           <button onclick="changeStatus(this);" data-status="On Bench" class="w-full flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-red-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100">
             On Bench
