--- a/testing.html
+++ b/testing.html
@@ -1,14 +1,84 @@
-<link rel="stylesheet" href="./dist/output.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./dist/output.css">
+</head>
+<body>
+  <div class="flex items-center">
+      <label for="hs-basic-with-description" class="text-sm text-gray-500 me-3">Off</label>
+      <input type="checkbox" id="hs-basic-with-description" class="relative w-[3.25rem] h-7 p-px bg-gray-400 border-transparent text-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:ring-emerald-600 disabled:opacity-50 disabled:pointer-events-none checked:bg-none checked:text-emerald-600 checked:border-emerald-600 focus:checked:border-emerald-600 before:absolute before:top-0 before:bottom-0 before:my-auto before:inline-block before:w-6 before:h-6 before:bg-white checked:before:bg-emerald-200 before:translate-x-0 checked:before:translate-x-full before:rounded-full before:shadow before:transform before:ring-0 before:transition before:ease-in-out before:duration-200">
+      <label for="hs-basic-with-description" class="text-sm text-gray-500 ms-3">On</label>
+    </div>
 
-<div class="flex items-center">
-    <label for="hs-basic-with-description" class="text-sm text-gray-500 me-3">Off</label>
-    <input type="checkbox" id="hs-basic-with-description" class="relative w-[3.25rem] h-7 p-px bg-gray-400 border-transparent text-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:ring-emerald-600 disabled:opacity-50 disabled:pointer-events-none checked:bg-none checked:text-emerald-600 checked:border-emerald-600 focus:checked:border-emerald-600 before:absolute before:top-0 before:bottom-0 before:my-auto before:inline-block before:w-6 before:h-6 before:bg-white checked:before:bg-emerald-200 before:translate-x-0 checked:before:translate-x-full before:rounded-full before:shadow before:transform before:ring-0 before:transition before:ease-in-out before:duration-200">
-    <label for="hs-basic-with-description" class="text-sm text-gray-500 ms-3">On</label>
-  </div>
+
+    <div class="flex">
+      <input type="radio" name="hs-radio-group" class="shrink-0 mt-0.5 border-gray-200 rounded-full text-emerald-600 focus:ring-emerald-500 disabled:opacity-50 disabled:pointer-events-none" id="poAwaited" name="po-status" checked>
+      <label for="poAwaited" class="text-sm text-gray-500 ms-2 dark:text-gray-400">PO Awaited</label>
+    </div>
+    <div class="flex">
+      <input type="radio" name="hs-radio-group" class="shrink-0 mt-0.5 border-gray-200 rounded-full text-emerald-600 focus:ring-emerald-500 disabled:opacity-50 disabled:pointer-events-none" id="poArrived" name="po-status">
+      <label for="poArrived" class="text-sm text-gray-500 ms-2 dark:text-gray-400">PO Arrived</label>
+    </div>
+  
+  
+    <!-- <div class="flex items-center">
+      <label for="hs-basic-with-description" class="text-sm text-gray-500 me-3">Off</label>
+      <input type="checkbox" id="hs-small-switch" class="relative w-11 h-6 p-px bg-gray-100 border-transparent text-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:ring-emerald-600 disabled:opacity-50 disabled:pointer-events-none checked:bg-none checked:text-emerald-600 checked:border-emerald-600 focus:checked:border-emerald-600 before:inline-block before:w-5 before:h-5 before:bg-white checked:before:bg-emerald-200 before:absolute before:top-0 before:bottom-0 before:my-auto before:translate-x-0 checked:before:translate-x-full before:rounded-full before:shadow before:transform before:ring-0 before:transition before:ease-in-out before:duration-200">
+      <label for="hs-small-switch" class="text-sm text-gray-500 ms-3">Small</label>
+    </div> -->
+    <button type="button" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" data-hs-overlay="#hs-static-backdrop-modal">
+      Open modal
+    </button>
+
+    <div class="max-w-xs bg-white border border-gray-200 rounded-xl shadow-lg" role="alert">
+      <div class="flex p-4">
+        <div class="flex-shrink-0">
+          <svg class="flex-shrink-0 h-4 w-4 text-teal-500 mt-0.5" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+          </svg>
+        </div>
+        <div class="ms-3">
+          <p class="text-sm text-gray-700">
+            This is a success message.
+          </p>
+        </div>
+      </div>
+    </div>
+    
+    <div id="hs-static-backdrop-modal" class="hs-overlay hidden w-full h-full fixed top-0 start-0 z-[60] overflow-x-hidden overflow-y-auto [--overlay-backdrop:static]">
+      <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto">
+        <div class="flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto dark:bg-gray-800 dark:border-gray-700 dark:shadow-slate-700/[.7]">
+          <div class="flex justify-between items-center py-3 px-4 border-b dark:border-gray-700">
+            <h3 class="font-bold text-gray-800 dark:text-white">
+              Modal title
+            </h3>
+            <button type="button" class="flex justify-center items-center w-7 h-7 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-gray-700 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600" data-hs-overlay="#hs-static-backdrop-modal">
+              <span class="sr-only">Close</span>
+              <svg class="flex-shrink-0 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+            </button>
+          </div>
+          <div class="p-4 overflow-y-auto">
+            <p class="mt-1 text-gray-800 dark:text-gray-400">
+              This is a wider card with supporting text below as a natural lead-in to additional content.
+            </p>
+          </div>
+          <div class="flex justify-end items-center gap-x-2 py-3 px-4 border-t dark:border-gray-700">
+            <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600" data-hs-overlay="#hs-static-backdrop-modal">
+              Close
+            </button>
+            <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
+              Understood
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="./assets/js/preline.js"></script>
+</body>
+</html>
 
 
-  <!-- <div class="flex items-center">
-    <label for="hs-basic-with-description" class="text-sm text-gray-500 me-3">Off</label>
-    <input type="checkbox" id="hs-small-switch" class="relative w-11 h-6 p-px bg-gray-100 border-transparent text-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:ring-emerald-600 disabled:opacity-50 disabled:pointer-events-none checked:bg-none checked:text-emerald-600 checked:border-emerald-600 focus:checked:border-emerald-600 before:inline-block before:w-5 before:h-5 before:bg-white checked:before:bg-emerald-200 before:absolute before:top-0 before:bottom-0 before:my-auto before:translate-x-0 checked:before:translate-x-full before:rounded-full before:shadow before:transform before:ring-0 before:transition before:ease-in-out before:duration-200">
-    <label for="hs-small-switch" class="text-sm text-gray-500 ms-3">Small</label>
-  </div> -->
+
