--- a/contract-info.html
+++ b/contract-info.html
@@ -536,10 +536,10 @@
                                             <tr>
                                                 <th scope="col"
                                                     class="px-6 py-3 text-left text-sm font-bold whitespace-nowrap text-gray-600 uppercase">
-                                                    TMC ID</th>
+                                                    Employee</th>
                                                 <th scope="col"
                                                     class="px-6 py-3 text-left text-sm font-bold whitespace-nowrap text-gray-600 uppercase">
-                                                    Employee</th>
+                                                    Billing</th>
                                                 <th scope="col"
                                                     class="px-6 py-3 text-left text-sm font-bold whitespace-nowrap text-gray-600 uppercase">
                                                     Jan</th>
@@ -580,46 +580,60 @@
                                         </thead>
                                         <tbody class="divide-y divide-gray-200">
                                             <tr>
-                                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">17461
+                                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">Keshav Narayan (17461)</td>
+                                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
+                                                    <div class="flex flex-col gap-2">
+                                                        <p class="rounded-full bg-emerald-100 text-emerald-500 py-1 px-2 font-medium text-center">Actual Billing</p>
+                                                        <p class="rounded-full bg-slate-100 text-slate-500 py-1 px-2 font-medium text-center">Provision Billing</p>
+                                                    </div>
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <p>Keshav Narayan</p>
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
-                                                </td>
-                                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
+                                                    <input type="text" class="text-center border-transparent p-1 mb-1 rounded block" value="454.00"  style="width: 5rem;" />
                                                 </td>
                                             </tr>
                                         </tbody>
