--- a/contract-info.html
+++ b/contract-info.html
@@ -582,7 +582,7 @@
                                             <tr>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">Keshav Narayan (17461)</td>
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">
-                                                    <div class="flex flex-col gap-2">
+                                                    <div class="flex flex-col gap-2 item">
                                                         <p class="rounded-full bg-emerald-100 text-emerald-500 py-1 px-2 font-medium text-center">Actual Billing</p>
                                                         <p class="rounded-full bg-slate-100 text-slate-500 py-1 px-2 font-medium text-center">Provision Billing</p>
                                                     </div>
