--- a/provision_requests.html
+++ b/provision_requests.html
@@ -347,9 +347,15 @@
                                                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">12400</td>
                                                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">12/11/2024</td>
                                                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800">
-                                                                        <div>
-                                                                            <button>Approve</button>
-                                                                            <button>Reject</button>
+                                                                        <div class="flex items-center gap-4">
+                                                                            <button class="flex items-center gap-2 border rounded-full py-1 px-2 border-[#40BD5E] text-[#40BD5E] hover:opacity-70">
+                                                                                <img class="w-4 h-4" src="./assets/images/btn_tick_btn.svg" alt="">
+                                                                                Approve
+                                                                            </button>
+                                                                            <button class="flex items-center gap-2 border rounded-full py-1 px-2 border-[#4B4E5C] hover:opacity-70">
+                                                                                <img class="w-4 h-4" src="./assets/images/btn_close_icon.svg" alt="">
+                                                                                Reject
+                                                                            </button>
                                                                         </div>
                                                                     </td>
                                                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 text-center">
