--- a/da_approve_provision.html
+++ b/da_approve_provision.html
@@ -301,7 +301,14 @@
                                         Remarks (DH)</th>
                                     <th scope="col"
                                         class="px-6 py-3 whitespace-nowrap text-left text-xs 2xl:text-sm font-medium text-black uppercase">
-                                        Action</th>
+                                        <div class="flex gap-4 items-center">
+                                            Action
+                                            <button type="button"
+                                                class="approve-all-btn py-1 px-4 inline-flex justify-center items-center gap-2 rounded-md border border-emerald-400 bg-[#00cc83] text-white hover:opacity-70 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm">
+                                                Approve All
+                                            </button>
+                                        </div>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody class="divide-y divide-gray-200">
@@ -343,7 +350,7 @@
                                                 </svg>
                                             </button>
                                             <button
-                                                class="flex items-center gap-2 border rounded-full py-1 px-2 border-[#40BD5E] text-[#40BD5E] hover:opacity-70">
+                                                class="approve-btn flex items-center gap-2 border rounded-full py-1 px-2 border-[#40BD5E] text-[#40BD5E] hover:opacity-70">
                                                 <img class="w-4 h-4" src="./assets/images/btn_tick_btn.svg" alt="">
                                                 Send for approval
                                             </button>
@@ -388,7 +395,7 @@
                                                 </svg>
                                             </button>
                                             <button
-                                                class="flex items-center gap-2 border rounded-full py-1 px-2 border-[#40BD5E] text-[#40BD5E] hover:opacity-70">
+                                                class="approve-btn flex items-center gap-2 border rounded-full py-1 px-2 border-[#40BD5E] text-[#40BD5E] hover:opacity-70">
                                                 <img class="w-4 h-4" src="./assets/images/btn_tick_btn.svg" alt="">
                                                 Re Send for approval
                                             </button>
