--- a/provision_oaf.html
+++ b/provision_oaf.html
@@ -241,7 +241,7 @@
                 </div>
             </div>
         </div>
-        <button data-hs-overlay="#hs-medium-modal" type="button"
+        <button type="button"
                 class="py-2 px-5 inline-flex justify-center items-center gap-2 rounded-md border border-emerald-400 bg-[#00cc83] text-white hover:opacity-70 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm sm:text-base">
                 Approve
             </button>
