--- a/da_approve_provision.html
+++ b/da_approve_provision.html
@@ -211,8 +211,8 @@
     <div class="main overflow-y-auto">
         <div class="border-b border-gray-200 overflow-x-auto mb-4">
             <nav class="flex space-x-2 bg-[#fafafa]" aria-label="Tabs" role="tablist">
-                <div class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500"
-                    id="tabs-with-underline-item-1" data-hs-tab="#tabs-with-underline-1">
+                <div
+                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500">
                     <!-- <img class="h-4 w-auto" src="./assets/images/total-projects-icon.svg" alt=""> -->
                     <div>
                         <span class="text-2xl font-extrabold block text-left">Requests For Provisions Update</span>
@@ -221,9 +221,7 @@
                     </div>
                 </div>
                 <button type="button"
-                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500"
-                    id="tabs-with-underline-item-2" data-hs-tab="#tabs-with-underline-2"
-                    aria-controls="tabs-with-underline-2" role="tab">
+                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500">
                     <img class="h-4 w-auto" src="./assets/images/total-projects-icon.svg" alt="">
                     <div>
                         <span class="text-base font-semibold block text-left">Total Requests</span>
@@ -231,9 +229,7 @@
                     </div>
                 </button>
                 <button type="button"
-                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500"
-                    id="tabs-with-underline-item-3" data-hs-tab="#tabs-with-underline-3"
-                    aria-controls="tabs-with-underline-3" role="tab">
+                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500">
                     <img class="h-4 w-auto" src="./assets/images/total-projects-icon.svg" alt="">
                     <div>
                         <span class="text-base font-semibold block text-left">Approved</span>
@@ -241,9 +237,7 @@
                     </div>
                 </button>
                 <button type="button"
-                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500"
-                    id="tabs-with-underline-item-3" data-hs-tab="#tabs-with-underline-3"
-                    aria-controls="tabs-with-underline-3" role="tab">
+                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500">
                     <img class="h-4 w-auto" src="./assets/images/total-projects-icon.svg" alt="">
                     <div>
                         <span class="text-base font-semibold block text-left">Pending for Approval</span>
@@ -251,9 +245,7 @@
                     </div>
                 </button>
                 <button type="button"
-                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500"
-                    id="tabs-with-underline-item-3" data-hs-tab="#tabs-with-underline-3"
-                    aria-controls="tabs-with-underline-3" role="tab">
+                    class="py-2 px-5 inline-flex items-baseline gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500">
                     <img class="h-4 w-auto" src="./assets/images/total-projects-icon.svg" alt="">
                     <div>
                         <span class="text-base font-semibold block text-left">Rejected</span>
@@ -327,8 +319,14 @@
                                         Project 1</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">Jan-24
                                     </td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">12400</td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">12/12/2024</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
+                                        <span class="normal-mode-content amount-val">12400</span>
+                                        <input class="edit-mode-content k-input amount-inp" type="number" name="" id="">
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 ">
+                                        <span class="normal-mode-content estimated-date-val">12/12/2024</span>
+                                        <input type="date" name="" id="" class="edit-mode-content k-input estimated-date-inp">
+                                    </td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 text-center">
                                         <span class="status pending">Pending</span>
                                     </td>
@@ -337,7 +335,15 @@
                                     </td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                         <div class="flex items-center gap-2">
-                                            <button>
+                                            <button onclick="setEditModeData(this);" class="edit-mode-content">
+                                                <svg class="w-4 h-4 hover:text-emerald-500"
+                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24">
+                                                    <path fill="currentColor"
+                                                        d="M5 21h14a2 2 0 0 0 2-2V8a1 1 0 0 0-.29-.71l-4-4A1 1 0 0 0 16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2m10-2H9v-5h6zM13 7h-2V5h2zM5 5h2v4h8V5h.59L19 8.41V19h-2v-5a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v5H5z" />
+                                                </svg>
+                                            </button>
+                                            <button onclick="setEditMode(this, true);" class="normal-mode-content">
                                                 <svg class="w-4 h-4 hover:text-emerald-500 focus:text-emerald-500"
                                                     xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                     viewBox="0 0 24 24">
@@ -350,7 +356,7 @@
                                                 </svg>
                                             </button>
                                             <button
-                                                class="approve-btn flex items-center gap-2 border rounded-full py-1 px-2 border-[#40BD5E] text-[#40BD5E] hover:opacity-70">
+                                                class="normal-mode-content approve-btn flex items-center gap-2 border rounded-full py-1 px-2 border-[#40BD5E] text-[#40BD5E] hover:opacity-70">
                                                 <img class="w-4 h-4" src="./assets/images/btn_tick_btn.svg" alt="">
                                                 Send for approval
                                             </button>
@@ -845,6 +851,44 @@
                     }
                 })
             }
+        }
+
+        function setEditMode(btn, isEditMode) {
+            const _tr = btn.closest("tr");
+            if (isEditMode) {
+                _tr && _tr.classList.add("edit-mode");
+            } else {
+                _tr && _tr.classList.remove("edit-mode");
+            }
+        }
+
+        function getFormattedDate(dateVal) {
+            const date = new Date(dateVal);
+            const yyyy = date.getFullYear();
+            let mm = date.getMonth() + 1; // Months start at 0!
+            let dd = date.getDate();
+
+            if (dd < 10) dd = '0' + dd;
+            if (mm < 10) mm = '0' + mm;
+
+            return dd + '/' + mm + '/' + yyyy;
+        }
+
+        function setEditModeData(btn) {
+            const _tr = btn.closest("tr");
+
+            const _amount = _tr.querySelector(".amount-inp").value;
+            const _estimatedDate = getFormattedDate(_tr.querySelector(".estimated-date-inp").value);
+
+            if(_amount) {
+                _tr.querySelector(".amount-val").innerText = _amount;
+            }
+
+            if(_estimatedDate) {
+                _tr.querySelector(".estimated-date-val").innerText = _estimatedDate;
+            }
+
+            setEditMode(btn, false);
         }
     </script>
 </body>
