--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="./dist/output.css">
-    <!-- <link rel="stylesheet" href="style2.css"> -->
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -51,14 +51,56 @@
                 </a>
             </li>
             <li>
-                <a href="#"
-                    class="menu-item text-xs lg:text-sm xl:text-base 2xl:text-xl px-2 py-2 xl:px-3 2xl:px-5 2xl:py-3 rounded-lg flex items-center gap-2">
+                <a data-hs-collapse="#hs-basic-collapse-heading"
+                    class="hs-collapse-toggle menu-item text-xs lg:text-sm xl:text-base 2xl:text-xl px-2 py-2 xl:px-3 2xl:px-5 2xl:py-3 rounded-lg flex items-center gap-2">
                     <svg class="w-3 h-3 xl:w-4 xl:h-4 2xl:w-5 2xl:h-5" xmlns="http://www.w3.org/2000/svg" width="24"
                         height="24" viewBox="0 0 24 24">
                         <path fill="currentColor" d="M13 9V3h8v6h-8ZM3 13V3h8v10H3Zm10 8V11h8v10h-8ZM3 21v-6h8v6H3Z" />
                     </svg>
-                    <span class="menu-item-text flex-1 overflow-hidden text-ellipsis">Billing</span>
+                    <span
+                        class="menu-item-text flex-1 overflow-hidden text-ellipsis whitespace-nowrap cursor-pointer">Billing
+                        Billing Billing</span>
+                    <!-- <svg class="hs-collapse-open:rotate-180 flex-shrink-0 w-6 h-6 transition-transform text-white"
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="m6 9 6 6 6-6" />
+                    </svg> -->
+                    <svg class="sidebar-dropdown-icon hs-collapse-open:rotate-180 flex-shrink-0 w-6 h-6 transition-transform text-white" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.11 0 2-.89 2-2V5a2 2 0 0 0-2-2m-7 12.71l-6-6l1.41-1.42L12 12.88l4.59-4.59L18 9.71z"/></svg>
                 </a>
+                <!-- <button type="button" class="hs-collapse-toggle py-3 px-4 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600" id="hs-basic-collapse" data-hs-collapse="#hs-basic-collapse-heading">
+                    Collapse
+                    <svg class="hs-collapse-open:rotate-180 flex-shrink-0 w-4 h-4 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 9 6 6 6-6"/></svg>
+                  </button> -->
+                <div id="hs-basic-collapse-heading"
+                    class="hs-collapse hidden w-full overflow-hidden transition-[height] duration-300 hs-collapse-open:bg-white hs-collapse-open:rounded-e"
+                    aria-labelledby="hs-basic-collapse">
+                    <div class="m-2">
+                        <ul class="sidebar-dropdown-menu flex flex-col gap-2">
+                            <li>
+                                <a href="#"
+                                    class="menu-item-inner text-xs lg:text-sm xl:text-base 2xl:text-xl px-2 py-2 xl:px-3 2xl:px-5 2xl:py-3 rounded-lg flex items-center gap-2">
+                                    <svg class="w-3 h-3 xl:w-4 xl:h-4 2xl:w-5 2xl:h-5"
+                                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M13 9V3h8v6h-8ZM3 13V3h8v10H3Zm10 8V11h8v10h-8ZM3 21v-6h8v6H3Z" />
+                                    </svg>
+                                    <span class="menu-item-text flex-1 overflow-hidden text-ellipsis">Billing</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"
+                                    class="menu-item-inner text-xs lg:text-sm xl:text-base 2xl:text-xl px-2 py-2 xl:px-3 2xl:px-5 2xl:py-3 rounded-lg flex items-center gap-2">
+                                    <svg class="w-3 h-3 xl:w-4 xl:h-4 2xl:w-5 2xl:h-5"
+                                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M13 9V3h8v6h-8ZM3 13V3h8v10H3Zm10 8V11h8v10h-8ZM3 21v-6h8v6H3Z" />
+                                    </svg>
+                                    <span class="menu-item-text flex-1 overflow-hidden text-ellipsis">Reports</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </li>
             <li>
                 <a href="#"
@@ -147,16 +189,24 @@
                     d="M.75 3h14.5a.75.75 0 0 1 0 1.5H.75a.75.75 0 0 1 0-1.5ZM3 7.75A.75.75 0 0 1 3.75 7h8.5a.75.75 0 0 1 0 1.5h-8.5A.75.75 0 0 1 3 7.75Zm3 4a.75.75 0 0 1 .75-.75h2.5a.75.75 0 0 1 0 1.5h-2.5a.75.75 0 0 1-.75-.75Z" />
             </svg>
         </button>
-        <button
-            class="relative inline-flex flex-shrink-0 justify-center items-center gap-2 w-8 h-8 xl:w-10 xl:h-10 2xl:h-12 2xl:w-12 rounded-md border border-transparent font-semibold bg-[#f9f9f9] text-black hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm">
-            <svg class="w-4 h-4 xl:w-5 xl:h-5 2xl:h-6 2xl:w-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                viewBox="0 0 24 24">
-                <path fill="currentColor"
-                    d="M19 13.586V10c0-3.217-2.185-5.927-5.145-6.742C13.562 2.52 12.846 2 12 2s-1.562.52-1.855 1.258C7.185 4.074 5 6.783 5 10v3.586l-1.707 1.707A.996.996 0 0 0 3 16v2a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-2a.996.996 0 0 0-.293-.707L19 13.586zM19 17H5v-.586l1.707-1.707A.996.996 0 0 0 7 14v-4c0-2.757 2.243-5 5-5s5 2.243 5 5v4c0 .266.105.52.293.707L19 16.414V17zm-7 5a2.98 2.98 0 0 0 2.818-2H9.182A2.98 2.98 0 0 0 12 22z" />
-            </svg>
-            <span
-                class="absolute top-0 right-0 block h-2 w-2 2xl:h-3 2xl:w-3 rounded-full transform -translate-y-1/2 translate-x-1/2 ring-2 ring-white bg-green-400"></span>
-        </button>
+        <div class="hs-dropdown relative inline-flex">
+            <button
+                class="relative inline-flex flex-shrink-0 justify-center items-center gap-2 w-8 h-8 xl:w-10 xl:h-10 2xl:h-12 2xl:w-12 rounded-md border border-transparent font-semibold bg-[#f9f9f9] text-black hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-sm">
+                <svg class="w-4 h-4 xl:w-5 xl:h-5 2xl:h-6 2xl:w-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                    viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                        d="M19 13.586V10c0-3.217-2.185-5.927-5.145-6.742C13.562 2.52 12.846 2 12 2s-1.562.52-1.855 1.258C7.185 4.074 5 6.783 5 10v3.586l-1.707 1.707A.996.996 0 0 0 3 16v2a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-2a.996.996 0 0 0-.293-.707L19 13.586zM19 17H5v-.586l1.707-1.707A.996.996 0 0 0 7 14v-4c0-2.757 2.243-5 5-5s5 2.243 5 5v4c0 .266.105.52.293.707L19 16.414V17zm-7 5a2.98 2.98 0 0 0 2.818-2H9.182A2.98 2.98 0 0 0 12 22z" />
+                </svg>
+                <span
+                    class="absolute top-0 right-0 block h-2 w-2 2xl:h-3 2xl:w-3 rounded-full transform -translate-y-1/2 translate-x-1/2 ring-2 ring-white bg-green-400"></span>
+            </button>
+            <div class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden min-w-[15rem] bg-white shadow-md rounded-lg p-2 mt-2"
+                aria-labelledby="hs-dropdown-with-header">
+                <div class="mt-2 py-2 first:pt-0 last:pb-0">
+                    Notif Dropdown
+                </div>
+            </div>
+        </div>
         <div class="hs-dropdown relative inline-flex">
             <button id="hs-dropdown-with-header" type="button"
                 class="hs-dropdown-toggle overflow-hidden inline-flex justify-center items-center gap-2 rounded-md border font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-emerald-500 transition-all text-sm">
