--- a/testing.html
+++ b/testing.html
@@ -314,9 +314,9 @@
     <input type="checkbox" id="markAsResigned" class="shrink-0 mt-0.5 border-2 border-red-600 bg-red-100 rounded text-red-600 focus:ring-red-500 disabled:opacity-50 disabled:pointer-events-none">
     <span class="text-red-600 font-medium">Mark as resigned</span>
   </label>
-  <label for="trainee" class="inline-flex items-center px-4 py-2 rounded-full bg-purple-100 gap-2">
-    <input type="checkbox" id="trainee" class="shrink-0 mt-0.5 border-2 border-purple-600 bg-purple-100 rounded text-purple-600 focus:ring-purple-500 disabled:opacity-50 disabled:pointer-events-none">
-    <span class="text-purple-600 font-medium">Trainee</span>
+  <label for="trainee" class="inline-flex items-center px-4 py-2 rounded-full bg-slate-200 gap-2">
+    <input type="checkbox" id="trainee" class="shrink-0 mt-0.5 border-2 border-slate-600 bg-slate-100 rounded text-slate-600 focus:ring-slate-500 disabled:opacity-50 disabled:pointer-events-none">
+    <span class="text-slate-600 font-medium">Trainee</span>
   </label>
 
   <div class="flex items-stretch rounded border">
